Change test world initialization
Changed the test world initialization, to have sets and lists that can be changed